# human-detection

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
human_detection/: config.py  detector.py  pipeline.py  video.py  visualize.py
human_detection/human_detection/metrics/: annotated.csv  annotated.json
human_detection/metrics/: annotated.csv  annotated.json  report.py
human_detection/models/: base_detector.py  detector.py  detector_conf.py  fasterrcnn.py  hog.py  yolo.py
human_detection/utils/: utils.py
